--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ sha3 = "0.10.8"
 hex-literal = "0.4.1"
 argon2 = "0.5.3"
 log = "0.4.21"
+fenwick-tree = "0.1.0"
+serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.85"
+hex = "0.4.3"
