--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ fenwick-tree = "0.1.0"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.85"
 hex = "0.4.3"
+base64 = "0.22.1"
