--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.85"
 hex = "0.4.3"
 base64 = "0.22.1"
+ratatui = "0.27.0"
