--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "testtest"
+name = "passrus"
 version = "0.1.0"
 edition = "2021"
 
@@ -16,4 +16,5 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.85"
 hex = "0.4.3"
 base64 = "0.22.1"
-ratatui = "0.27.0"
+clap = { version = "4.5.16", features = ["derive"] }
+camino = "1.1.9"
