--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.85"
 hex = "0.4.3"
 base64 = "0.22.1"
+prettytable = "0.10.0"
+tokio = { version = "1.40.0", features = ["full"] }
